--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title: Your awesome title
 email: your-email@domain.com
 description: description
-baseurl: /Jekyll-Avalon
-url: http://joshuaavalon.github.io
+baseurl: 
+url: "https://f-jane.github.io"
 twitter_username: joshuaavalon
 github_username:  joshuaavalon
 
